crates/cli/tests/snapshots/generate_test__errors_when_parsing_custom_var_types.snap
---
source: crates/cli/tests/generate_test.rs
expression: assert.output_standardized()
---
Variable testing 
A template for testing all variable config combinations.

Error: codegen::args::parse_failed

  × Failed to parse variables from arguments.
  ╰─▶   × invalid value 'abc' for '--number <number>': invalid digit found
        │ in string
