crates/cli/tests/snapshots/generate_test__overwrites_existing_files_when_forced.snap
---
source: crates/cli/tests/generate_test.rs
expression: assert.output_standardized()
---
standard ──────────────────────────────────────────────────────────────────

  Template title
  Some description of the template and its files.

- replaced -➤ test/file.ts
- replaced -➤ test/file.txt
- replaced -➤ test/folder/nested-file.ts
- replaced -➤ test/other.txt
- created --➤ test/image.jpg
