crates/cli/tests/snapshots/generate_test__renders_and_interpolates_templates-2.snap
---
source: crates/cli/tests/generate_test.rs
assertion_line: 128
expression: "fs::read_to_string(fixture.path().join(\"./test/control.txt\")).unwrap()"
---
Should show


Looping multenum:

1. b


Including partial:
THIS WAS INCLUDED


Filters:
DEFAULT
246
1

